2006-05-11  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-caption.c
	(hildon_caption_set_label_alignment)
	(hildon_caption_get_label_alignment): added gtk-doc "Since" marker

	* doc/hildon-libs-docs.sgml: added index for 0.12.0 new symbols


2006-05-10  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	(hildon_time_editor_set_ticks) removed block signal handler for
	hildon_time_editor_inserted_text. Added block and unblock signal
	handler for hildon_time_editor_entry_focusout.

	NB#28027

2006-05-10  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-caption.c:
	(hildon_caption_size_allocate): add a margin to the start position
	of the caption_area (HILDON_CAPTION_SPACING), leaving this way the
	space required to the left of the caption.

	(hildon_caption_expose): allocation, subtract the left margin
	which we have added to the children widgets when we paint the
	selection box.
       	
	NB#28483

3006-05-10 Tapani Palli <tapani.palli@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	block signal handler for hildon_time_editor_inserted_text

	NB#28679

2006-05-09  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	(_hildon_time_editor_get_time_separators) renamed from
	_get_time_separator(). Refactored to return h-m and m-s
	separators. Now it is independent of the time editor priv
	structure and receives two labels that can be NULL.

	(_HildonTimeEditorPrivate): removed hm_sep_symbol and ms_sep_symbol
	members: not used anymore.
	(hildon_time_editor_init): removed ref to above members.
	(hildon_time_editor_finalize): likewise

	(hildon_time_editor_check_locale): use
	_hildon_time_editor_get_time_separators()
	
	* hildon-widgets/hildon-private.h: new file. To be used to use
	private functions from other widgets inside the library.
	(_hildon_time_editor_get_time_separators): added.
	
	* hildon-widgets/Makefile.am:
	added hildon-private.h to the source list.

	