@@ -1,3 +1,11 @@
+2006-05-15  Johan Bilien  <johan.bilien@nokia.com>
+
+	* hildon-widgets/hildon-window.[ch]:
+	  - Added clipboad_operation signal used by osso-browser to receive
+	    clipborad operations from hildon-input-method
+	  - Trigger this signal when we receive an clipboard X message
+	    from HIM.
+
 2006-05-11  Luc Pionchon  <luc.pionchon@nokia.com>
 
 	* hildon-widgets/hildon-caption.c
